<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/ic_register" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/welcome"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edRegisterName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/rounded_background"
        android:drawableStart="@drawable/ic_account"
        android:hint="@string/username_hint"
        android:inputType="text"
        android:padding="16dp"
        android:textColorHint="#757575"
        tools:ignore="VisualLintTextFieldSize" />

    <com.example.storyapp.ui.customviews.EmailEditText
        android:id="@+id/edRegisterEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_background"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textColorHint="#757575"
        tools:ignore="VisualLintTextFieldSize" />

    <com.example.storyapp.ui.customviews.PasswordEditText
        android:id="@+id/edRegisterPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_background"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:padding="16dp"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_button"
        android:text="@string/register_button"
        android:textSize="18sp"
        tools:ignore="VisualLintButtonSize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/account_prompt"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/hyperlinkLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textSize="16sp"
            android:text="@string/login_prompt"
            android:textColor="@color/orange_light"
            android:textStyle="bold" />
    </LinearLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />
</LinearLayout>
