<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/theme_change_button"
            android:textSize="16sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/theme_change_button"
            tools:ignore="DuplicateSpeakableTextCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnLanguageChange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_button"
            android:text="@string/language_option"
            android:textSize="16sp"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_button"
            android:text="@string/logout_button"
            android:textSize="16sp"
            tools:ignore="VisualLintButtonSize" />
    </LinearLayout>
</LinearLayout>
