<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

    <!-- ScrollView to make content scrollable -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/ivPreview"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_gravity="center"
                android:background="@drawable/card_border"
                android:contentDescription="@string/image_label"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_placeholder" />

            <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="16dp">

                <Button
                    android:id="@+id/btnCamera"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:alpha="1"
                    android:background="@drawable/rounded_button"
                    android:text="@string/camera_option"
                    android:textSize="16sp"
                    tools:alpha="1"
                    tools:ignore="VisualLintButtonSize"/>

                <Button
                    android:id="@+id/btnGallery"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:alpha="1"
                    android:background="@drawable/rounded_button"
                    android:text="@string/gallery_option"
                    android:textSize="16sp"
                    tools:alpha="1"
                    tools:ignore="VisualLintButtonSize"/>
            </LinearLayout>

            <EditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:background="@drawable/card_border"
                android:gravity="top"
                android:hint="@string/description_hint"
                android:inputType="textMultiLine"
                android:minHeight="100dp"
                android:padding="16dp"
                android:textColorHint="#757575"
                tools:ignore="VisualLintTextFieldSize" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <CheckBox
                    android:id="@+id/checkboxAddLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tvCurrentLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_location"
                    android:textSize="16sp"/>
            </LinearLayout>

            <Button
                android:id="@+id/btnUpload"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:alpha="1"
                android:background="@drawable/rounded_button"
                android:text="@string/upload_button"
                android:textSize="16sp"
                tools:alpha="1"
                tools:ignore="VisualLintButtonSize" />
        </LinearLayout>
    </ScrollView>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
