<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="16dp">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="365dp"
        android:layout_height="365dp"
        android:layout_centerInParent="true"
        android:src="@drawable/ic_welcome" />

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="16dp"
        android:alpha="0"
        android:gravity="center"
        android:text="@string/welcome_page"
        android:textSize="20sp"
        tools:alpha="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvWelcome"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:alpha="0"
            android:background="@drawable/rounded_button"
            android:text="@string/login_button"
            android:textSize="20sp"
            tools:alpha="1"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:alpha="0"
            android:background="@drawable/rounded_button"
            android:text="@string/register_button"
            android:textSize="20sp"
            tools:alpha="1"
            tools:ignore="VisualLintButtonSize" />
    </LinearLayout>

</RelativeLayout>
